--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
 <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="scripts.js"></script>
+    <title>Day Scheduler</title>
+</head>
+
+<body>
+    <!-- contains content at top of page -->
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">
+                Work Day Scheduler
+            </h1>
+
+            <!-- displays current day -->
+            <p class="day" id="day-display"></p>
+
+            <p class="instructions">
+                Click into desired time slot to add text<br>
+                Press enter to save your input<br>
+                Click the check button when tasks are completed<br>
+                (Completed tasks will be erased when page is reloaded)
+            </p>
+        </div>
+    </div>
+
+    <!-- contains list of input forms -->
+    <ul class="list-group">
+        <!-- contains single input form -->
+        <li class="list-group-item" id="0" value="9">
+            <!-- time at left side of row -->
+            <div class="time-slot">
+                9 AM
+            </div>
+            <!-- text input form -->
+            <input type="text" id="input-0" name="9am" class="form first">
+            <!-- button at right side of row -->
+            <button class="check-button" id="btn-0" name="first" value="9am">
+                ✓
+            </button>
+        </li>
+        <li class="list-group-item" id="1" value="10">
+            <div class="time-slot">
+                10 AM
+            </div>
+            <input type="text" id="input-1" name="10am" class="form second">
+            <button class="check-button" id="btn-1" name="second" value="10am">
+                ✓
+            </button>
+        </li>
+        <li class="list-group-item" id="2" value="11">
+            <div class="time-slot">11 AM</div>
+            <input type="text" id="input-2" name="11am" class="form third">
+            <button class="check-button" id="btn-2" name="third" value="11am">✓</button>
+        </li>
+        <li class="list-group-item" id="3" value="12">
+            <div class="time-slot">12 PM</div>
+            <input type="text" id="input-3" name="12pm" class="form fourth">
+            <button class="check-button" id="btn-3" name="fourth" value="12pm">✓</button>
+        </li>
+        <li class="list-group-item" id="4" value="13">
+            <div class="time-slot">1 PM</div>
+            <input type="text" id="input-4" name="1pm" class="form fifth">
+            <button class="check-button" id="btn-4" name="fifth" value="1pm">✓</button>
+        </li>
+        <li class="list-group-item" id="5" value="14">
+            <div class="time-slot">2 PM</div>
+            <input type="text" id="input-5" name="2pm" class="form sixth">
+            <button class="check-button" id="btn-5" name="sixth" value="2pm">✓</button>
+        </li>
+        <li class="list-group-item" id="6" value="15">
+            <div class="time-slot">3 PM</div>
+            <input type="text" id="input-6" name="3pm" class="form seventh">
+            <button class="check-button" id="btn-6" name="seventh" value="3pm">✓</button>
+        </li>
+        <li class="list-group-item" id="7" value="16">
+            <div class="time-slot">4 PM</div>
+            <input type="text" id="input-7" name="4pm" class="form eighth">
+            <button class="check-button" id="btn-7" name="eighth" value="4pm">✓</button>
+        </li>
+        <li class="list-group-item" id="8" value="17">
+            <div class="time-slot">5 PM</div>
+            <input type="text" id="input-8" name="5pm" class="form ninth">
+            <button class="check-button" id="btn-8" name="ninth" value="5pm">✓</button>
+        </li>
+    </ul>
+</body>
+
+</html>
