--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="scripts.js"></script>
+    <script src="https://momentjs.com/downloads/moment.min.js"></script>
     <title>Day Scheduler</title>
 </head>
 
@@ -93,6 +93,10 @@
             <button class="check-button" id="btn-8" name="ninth" value="5pm">✓</button>
         </li>
     </ul>
+
+
+
+    <script src="scripts.js"></script>
 </body>
 
 </html>
